# laika

./: .gitignore  LICENSE  docker-compose.yml  layerannot_parse1.json  pyproject.toml  testplan.dxf
.claude/: settings.local.json
apps/api/: __init__.py  main.py
apps/api/src/: __init__.py
apps/api/src/routes/: __init__.py  generation.py  projects.py  projects.ts  queries.py  queries.ts  uploads.py  uploads.ts
apps/web/: index.html  package-lock.json  package.json  tsconfig.json
apps/web/public/: index.html  style.css
apps/web/public/js/: api.js  auth.js  convert.js  generate.js  main.js  parse.js  results.js  smart-select.js  state.js  tabs.js  upload.js  viewer.js
apps/web/src/: main.ts
apps/worker/: __init__.py  main.py
apps/worker/src/: __init__.py
apps/worker/src/jobs/: __init__.py  convert_and_parse.py  dwg_to_dxf.py  dwg_to_dxf.ts  dxf_parse.py  dxf_parse.ts  dxf_parse2.py  index_project.py  index_project.ts  semantic_build.py  semantic_build.ts
apps/worker/src/pipelines/: generate_dxf.py  index_project.py  semantic_build.py
config/: dxf_rules.json
docs/: architecture.md  data-model.md  llm.md  pipeline.md  viewer.md
examples/sample-project/: README.md
infra/db/: README.md  alembic.ini
infra/db/migrations/: env.py
infra/db/migrations/versions/: 0001_initial.py  0002_expand_dxf_types.py  0003_add_dxf_parse_sections.py  0004_drop_dxf_entities_raw.py  0005_update_semantic_objects_kind.py  0006_add_pgvector.py  (+1 more)
infra/docker/api/: Dockerfile
infra/docker/db/: Dockerfile
infra/docker/oda/: Dockerfile  README.md
ops/dashboards/: README.md
ops/runbooks/: conversion-failures.md
scripts/: README.md
tests/: A011_설계개요.dxf  README.md
(+9 files in other folders)
