[project]
name = "laika"
version = "0.1.0"
description = "DWG/DXF 파이프라인, RAG 기반 질의응답 서비스"
authors = [{ name = "laika" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.6",
  "sqlalchemy[asyncio]>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.12",
  "ezdxf>=1.3",
  "langchain>=0.1.0",
  "openai>=1.6",
  "pgvector>=0.2.5",
  "geoalchemy2>=0.14",
  "redis>=5.0",
  "rq>=1.15",
  "python-dotenv>=1.0",
]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 120
target-version = "py310"
