[project]
name = "laika"
version = "0.1.0"
description = "DWG/DXF 파이프라인, RAG 기반 질의응답 서비스"
authors = [{ name = "laika" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.6",
  "sqlalchemy[asyncio]>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.12",
  "ezdxf>=1.3",
  "langchain>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-community>=0.0.20",
  "anthropic>=0.18.0",
  "sentence-transformers>=2.2.0",
  "pgvector>=0.2.5",
  "geoalchemy2>=0.14",
  "redis>=5.0",
  "rq>=1.15",
  "python-multipart>=0.0.7",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]
exclude = ["infra*", "storage*", "services*", "config*", "ops*", "tests*", "scripts*", "docs*", "examples*"]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 120
target-version = "py310"
